--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="resultado"></div> 
         </form>
     </div>
-    <script src="script.js"></script>
+    <script src="https://isaque4nd.github.io/SuperTrunfo1.0/script.js"></script>
 </body>
 
 </html>
